# terrarium-poly-synth-test

./: CMakeLists.txt  README.md  main.cpp
lib/gcem/: CMakeLists.txt
lib/libDaisy/: CMakeLists.txt
util/: InputGate.h  OnePoleLowpass.h  PolyPitchDetector.h  ResonantLowpass.h  embed_wav_header.py
